crates/eure-macros/tests/compile_fail/proxy_union_tuple_mismatch_into.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/proxy_union_tuple_mismatch_into.rs:12:12
   |
12 |     T(u32, u64),
   |            ^^^ expected `&u64`, found `&u32`
   |
   = note: expected reference `&u64`
              found reference `&u32`
